[package]
name = "assert_enum_variants"
version = "0.1.1"
edition = "2024"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
description = "A Rust macro that asserts that all variants of an enum are as provided in the macro invocation."
documentation = "https://docs.rs/assert_enum_variants"
readme = "README.md"
keywords = [
    "assert",
    "enum",
    "variants",
]
categories = [
    "development-tools",
    "development-tools::debugging",
    "development-tools::testing",
    "no-std",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/assert_enum_variants"
